# Dulus

./: .git-blame-ignore-revs  MANIFEST.in  README.md  agent.py  analytics.py  batch_api.py  compaction.py  config.py  context.py  dulus.py  dulus.spec  dulus_analytics.py  dulus_gui.py  file_filter.py  index.html  install.sh  license_manager.py  paste_placeholders.py  personality_config.py  providers.py  pyproject.toml  requirements.txt  requirements_gui.txt  soul.py  spinner.py  telegram_community.py  tools.py  updater.py  webchat_server.py  welcome.py
.github/workflows/: binary.yml  deb.yml
assets/js/: dulus-analytics-config.js  dulus-analytics.js
docs/: API.md  BRAND_GUIDE.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  FAQ.md  GETTING_STARTED.md  INVESTOR_BRIEF.md  README.md  README_AR.md  README_EN.md  README_ES.md  README_FR.md  README_JA.md  README_KO.md  README_PT.md  README_RU.md  README_ZH.md  SECURITY.md  api.html  architecture.md  index.html  news.md  whitepaper.md
dulus_mcp/: client.py  commands.py  hub.py
dulus_tools/: tree_ls.py
gui/: chat_widget.py  main_window.py  session_utils.py  settings_dialog.py  sidebar.py  tasks_view.py  themes.py  tool_panel.py
memory/: __init__.py  consolidator.py  mempalace_bridge.py  palace.py  sessions.py  store.py  tools.py
memory/seeds/: short_memory.md
packaging/: build-deb.sh
skill/bundled/: README.md
skill/bundled/unbroker/: README.md  SKILL.md
skill/bundled/unbroker/references/: methods.md
skill/bundled/unbroker/scripts/: cdp.py  config.py  crypto.py  paths.py  pdd.py  storage.py
tests/: test_provider_errors.py  test_tree_ls.py
tools/: deepseek_login_harvest.py
voice/: stt.py  tts.py
webchat_ui/: __init__.py  app.js  index.html  style.css
