[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dulus"
version = "0.2.95"
description = "Use IA as an agent without an API key. $0. Harvest your browser session for Gemini (guest, no login), Claude.ai, Claude Code, Kimi.com, Qwen, DeepSeek — drive them like an API, no per-token billing. Plus LiteLLM (100+ paid providers), local models via Ollama, /lang in 34 languages, Mesa Redonda, voice, OCR, MemPalace, embedded sandbox OS."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "GPL-3.0"}
authors = [{name = "KevRojo"}]
keywords = [
    "ai", "cli", "llm", "claude", "gemini", "nvidia", "openai",
    "kimi", "deepseek", "qwen", "ollama", "agent", "tts", "voice",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Terminals",
]
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.30.0",
    "httpx>=0.27.0",
    "requests>=2.31.0",
    "rich>=13.0.0",
    "prompt_toolkit>=3.0.0",
    "Flask>=3.1.3",
    "bubblewrap-cli>=1.0.0",
    "customtkinter>=5.2.0",
    "Pillow>=10.0.0",
    "typing-extensions>=4.10.0",
    # Composio Tool Router — bundled plugin needs this to talk to 1000+ apps
    # without going through MCP. Only ~1MB on the wheel; worth it as a default.
    "composio>=1.0.0rc2",
    # HTML parsing — used by web scraping flows, harvest commands,
    # and several plugins. Tiny dep; ship it by default.
    "beautifulsoup4>=4.12.0",
]

# mempalace pulls chromadb (26 transitive deps incl. numpy + onnxruntime),
# which on termux/aarch64 has no wheels and on regular installs sends pip's
# resolver into a backtracking loop trying to reconcile typing-extensions /
# pydantic / httpx ranges. Keeping it optional lets `pip install dulus` succeed
# in seconds everywhere; power users opt in with `pip install dulus[memory]`
# (or `dulus[full]`) when they want MemPalace per-turn injection.
[project.optional-dependencies]
memory = ["mempalace>=3.3.4"]
voice = ["sounddevice", "elevenlabs>=1.0.0"]
webbridge = ["playwright>=1.40.0"]
# LiteLLM unified gateway — one provider entry, 100+ backends (OpenRouter,
# Groq, Together, Bedrock, Vertex, Cohere, Perplexity, xAI, Mistral, …).
# Optional because it pulls a sizeable transitive dep tree (tokenizers,
# tiktoken, click, importlib-metadata, etc.) most users won't need until
# they pick litellm in the welcome wizard.
litellm = ["litellm>=1.50.0"]
# OCR — local text extraction from images, no vision model call. Cheaper
# than /img for receipts, code screenshots, error stacks, dense tables.
# pytesseract needs the Tesseract binary installed separately:
#   Windows: winget install -e --id UB-Mannheim.TesseractOCR
#   Linux:   sudo apt-get install -y tesseract-ocr
#   macOS:   brew install tesseract
# easyocr is the pure-Python fallback but pulls ~1GB of PyTorch deps,
# so we leave it out of the default extra; opt in with `dulus[ocr-deep]`.
ocr = ["pytesseract>=0.3.10", "Pillow>=10.0.0"]
ocr-deep = ["pytesseract>=0.3.10", "Pillow>=10.0.0", "easyocr>=1.7.0"]
full = ["mempalace>=3.3.4", "sounddevice", "elevenlabs>=1.0.0", "playwright>=1.40.0", "litellm>=1.50.0", "pytesseract>=0.3.10"]

[project.scripts]
dulus = "dulus:main"

[project.urls]
Homepage = "https://github.com/KevRojo/Dulus"
Repository = "https://github.com/KevRojo/Dulus"
Issues = "https://github.com/KevRojo/Dulus/issues"

# ── Build config ────────────────────────────────────────────────────────────
# Fast-path: ship every top-level .py as a module + every subpackage with
# its __init__.py. Cleaner restructure can come later.
[tool.setuptools]
py-modules = [
    "agent",
    "batch_api",
    "claude_code_watcher",
    "clipboard_utils",
    "cloudsave",
    "common",
    "compaction",
    "config",
    "context",
    "dulus",
    "dulus_gui",
    "input",
    "license_manager",
    # NOTE: skipping "memory" — there's a package memory/ that supersedes
    # the legacy memory.py shim. Same import name; can't ship both.
    "offload_helper",
    "providers",
    "sandbox_bootstrap",
    "skills",
    "soul",
    "spinner",
    "string_utils",
    "subagent",
    "tmux_offloader",
    "tmux_tools",
    "tool_registry",
    "tools",
    "webchat",
    "webchat_server",
    "welcome",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "backend*",
    "checkpoint*",
    "data*",
    "docs*",
    "gui*",
    "dulus_mcp*",
    "dulus_tools*",
    "memory*",
    "multi_agent*",
    "plugin*",
    "skill*",
    "task*",
    "ui*",
    "voice*",
    "webbridge*",
    # sandbox/dist/ ships in the wheel so webchat serves /sandbox/ directly
    # (back to the 0.2.81 layout — no tarball, no extract-on-first-run).
    # GitHub Linguist won't double-count: .gitattributes marks sandbox/**
    # as linguist-vendored=true.
    "sandbox*",
]
exclude = [
    "tests*",
    "__pycache__*",
    # Don't ship sandbox sources / node_modules / vite cache — only dist/.
    "sandbox.src*",
    "sandbox.node_modules*",
    "sandbox.public*",
]

[tool.setuptools.package-data]
"*" = ["*.html", "*.css", "*.js", "*.jsx", "*.ts", "*.tsx", "*.svg", "*.json", "*.md", "*.png", "*.jpg", "*.jpeg", "*.txt", "*.py"]
"sandbox" = ["dist/**/*", "dist/**/.*"]
# Bundled Agent Skills shipped with Dulus (kepano's obsidian-skills suite,
# etc.). Each lives at `skill/bundled/<name>/SKILL.md` with optional
# `references/*.md` files the skill body links to.
"skill" = ["bundled/**/*"]
